--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <script src="/js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
 
